Fix color contrasts

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ h4 {
 }
 
 .color-blue {
-  color: #374af3;
+  color: #371fff;
 }
 
 .color-dark-blue {
